--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "node": "*",
     "npm": "*"
   },
+  "engines": {
+    "node": ">= 6.7.0",
+    "npm": ">= 5.4.2"
+  },
   "scripts": {
     "start": "node server.js",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
