--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.7.0"
-  },
-  "devDependencies": {
+    "react-scripts": "1.0.13",
     "faker": "^3.1.0",
     "fakir": "0.0.2",
     "fixed-data-table": "^0.6.3",
@@ -20,7 +18,8 @@
     "react-router": "^3.0.0",
     "redux": "latest",
     "redux-logger": "latest",
-    "redux-thunk": "latest"
+    "redux-thunk": "latest",
+    "redux-form": "^7.1.1"
   },
   "dependencies": {
     "chai": "^3.5.0",
@@ -29,7 +28,8 @@
     "express": "^4.13.4",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
-    "object-assign": "4.1.0"
+    "object-assign": "4.1.0",
+    "redux-form-website-template": "0.0.80"
   },
   "scripts": {
     "start": "node server.js",
