--- a/package.json
+++ b/package.json
@@ -32,11 +32,7 @@
     "redux-form-website-template": "0.0.80"
   },
   "scripts": {
-    "start": "node server.js",
-    "startdev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server.js"
   },
   "main": ".openshift/server.js"
 }
